cassio: appendix and db.c edited

--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -37,7 +37,7 @@
 	numberstyle=\tiny,% 
 	stepnumber=5,%
 	numbersep=5pt,% 
-	backgroundcolor=\color{blue!10},% 
+	backgroundcolor=\color{green!15},% 
 	tabsize=4,% 
 	keywordstyle=\color{green!65!black},% 
 	commentstyle=\color{blue},% 
@@ -48,6 +48,25 @@
 	belowcaptionskip={\abovecaptionskip},%
 	showstringspaces=false, 
 	literate={Ê}{{\^{E}}}1
+}%
+
+\lstdefinestyle{code} {%
+	basicstyle=\ttfamily\footnotesize,
+	backgroundcolor=\color{blue!10},
+	escapeinside={@}{@},
+	frame=single, 
+	captionpos=t,
+	upquote=false,
+	numberfirstline=false,% 
+	stepnumber=5,%
+	tabsize=4,% 
+	keywordstyle=\color{green!65!black},% 
+	commentstyle=\color{blue},%
+	stringstyle=\color{magenta},% 
+	breaklines=true,% 
+	emph={label},%
+	abovecaptionskip=10pt,% 
+	belowcaptionskip={\abovecaptionskip},%
 }%
 
 \title{
