cassio: future+metodol+appendix edited

--- a/tech_report/apendice.tex
+++ b/tech_report/apendice.tex
@@ -1,4 +1,5 @@
-\begin{section}{Pedro: Codigos LAMP}
+% Pedro
+\begin{section}{Codigos LAMP}
 Com a sensível complexidade dos comandos usados para a comunicação com a TV,
 devido ao número de campos presente em cada comando e a diferença existente
 entre cada campo, bem como evitar possíveis problemas de escalabilidade quando o
@@ -156,9 +157,9 @@ função \textit{$handle\_user()$} para modificar a string do usuário
 e posteriormente usá-la para montar a sintaxe da \textit{query}.
 
 \end{section}
-%% THANKS PESRO FOR YOUR CONTRIBUTION %%
 
-\begin{section}{Thiago: Codigos Arduino/C for IR Tx/Rx}
+% Thiago
+\begin{section}{Codigos Arduino/C for IR Tx/Rx}
 \textcolor{red}
 {*
 \large
@@ -310,5 +311,11 @@ void SendCommand(uint8_t cp) {
 		Serial.println("Comando enviado!");
 }
 \end{lstlisting}
+\end{section}
+
+% cassio
+\begin{section}{Codigo Arduino Analisador de Onda Quadrada}
+\lstinputlisting[style=code, language=matlab, firstline=4, lastline=62]
+{codes/myanalyze.m}
 \end{section}
 %%% EOF %%%
