cassio: cover+rev

--- a/tech_report/tech_report.tex
+++ b/tech_report/tech_report.tex
@@ -100,7 +100,7 @@
 	\begin{tabular*}{.9\linewidth}{p{.45\linewidth}p{.45\linewidth}}
 	& Projeto apresentado à disciplina Projetos de Harware e Interfaceamento 
 	como requisito de avaliação.
-	Professores: Jeferson Leite e Adalbery Castro.
+	Professores: Jeferson Breno N. Leite e Adalbery Rodrigues Castro.
 	\end{tabular*}
 \end{table}
 \vfill
