cassio: IEEE_TheoRev+1 + bib

--- a/tech_report/tech_report.bib
+++ b/tech_report/tech_report.bib
@@ -26,6 +26,13 @@
 	url = {http://andicelabs.com/2014/03/usb-audio-beaglebone/}
 }
 
+@inproceedings{Sefat14,
+	author = {Md. Syadus Sefat {et. al}},
+	title = {Implementation of Vision Based Intelligen Home Automation and Security System},
+	publisher = {{IEEE}},
+	year = {2014}
+}
+
 @inproceedings{Barrena11,
 	author = {Stephanie Barrena {et. al}},
 	title = {Designing Android Applications with both Online and Offline Voice Control of Household Devices},
