--- a/tech_report/apendice.tex
+++ b/tech_report/apendice.tex
@@ -163,148 +163,26 @@ e posteriormente usá-la para montar a sintaxe da \textit{query}.
 % melhor colocar a explicação dentro de comentários dentro do próprio código, do
 % jeito que estás fazendo. Indentação é um tab de 4 espaços, ajeita.
 \begin{section}{Arduino: IR Tx/Rx}
-\begin{lstlisting}[style=code, language=c]
-/* C\'{o}digo arduino de decodifica\c{c}\~{a}o de comandos infravermelhos
- *
- * O programa decodifica os comandos enviados por um controle remoto (TV, DVD,
- * Ar condicionado...) recebidos por um receptor IR ligado ao arduino e 
- * redireciona o comando usando um transmissor IR 'imitando' os comandos 
- * decodificados. A decodificação é feita captando a duração em que o LED IR
- * ficou ligado transmitindo ou desligado e armazenando essa informação em uma
- * matriz.
- * */
 
-/* \'{E} necessario usar a leitura direta dos pinos do arduino, ja que a func\~{a}o
- * digitalRead() \'{e} lenta e o timing \'{e} muito importante aqui.
- * */
+\lstinputlisting[style=code, language=c, firstline=1, lastline=36,
+caption={Declarações globais e função {\tt setup()}}, label={lst:dbphi0}]
+{codes/arduino_IR.c}
 
-#include <math.h>
-#define IRpin_PIN      PIND
-#define IRpin          2
+\lstinputlisting[style=code, language=c, firstline=38, lastline=92,
+caption={Função {\tt loop()}}, label={lst:dbphi0}]
+{codes/arduino_IR.c}
 
-int IRledPin = 13;
+\lstinputlisting[style=code, language=c, firstline=94, lastline=107,
+caption={Função {\tt printPulses()}}, label={lst:dbphi0}]
+{codes/arduino_IR.c}
 
-// Pulso máximo de 65 milisegundos
-#define MAXPULSE 65000
+\lstinputlisting[style=code, language=c, firstline=109, lastline=128,
+caption={Função {\tt pulseIR()}}, label={lst:dbphi0}]
+{codes/arduino_IR.c}
 
-// Se a resolu\c{c}\~{a}o for grande demais o timing n\~{a}o será preciso
-#define RESOLUTION 20 
-
-// 100 pares de pulsos armazenados (on-off)
-uint16_t pulses[100][2];  // par de pulsos high e low 
-uint8_t currentpulse = 0; // index dos pulsos sendo armazenados
-int pulsedb[200]; // vetor de pulsos em milisegundos que será usado para 
-				  // enviar os comandos
-
-void setup(void) {
-		pinMode(IRledPin, OUTPUT);
-		Serial.begin(9600);
-		Serial.println("Pronto para decodificar IR!");
-}
-
-void loop(void) {
-		uint16_t highpulse, lowpulse;  
-		highpulse = lowpulse = 0; 
-
-		//  IRpin_PIN & (1 << IRpin) = leitura direta do pino 
-		while (IRpin_PIN & (1 << IRpin)) {
-				// Pino ainda high
-
-				highpulse++;
-				delayMicroseconds(RESOLUTION);
-
-				/* Se o pulso for muito longo, ou nada ocorreu ou o c\'{o}digo
-				 * terminou. Mostra os tempos de pulso no monitor serial.
-				 * */
-				if ((highpulse >= MAXPULSE) && (currentpulse != 0)) {
-						printpulses();
-						currentpulse=0;
-						return;
-				}
-		}
-		// Pulso nao foi muito longo, armazena na matriz
-		pulses[currentpulse][0] = highpulse;
-
-		// Mesmo que o anterior
-		while (! (IRpin_PIN & _BV(IRpin))) {
-				// Pino ainda low
-				lowpulse++;
-				delayMicroseconds(RESOLUTION);
-				if ((lowpulse >= MAXPULSE)  && (currentpulse != 0)) {
-						printpulses();
-						currentpulse=0;
-						return;
-				}
-		}
-		pulses[currentpulse][1] = lowpulse;
-
-		/* Armazenando a matriz de duas colunas em um vetor com os valores
-		 * alternados de cada coluna para, possivelmente, serem enviados
-		 * a um banco de dados.
-		 * */
-		int i=0;
-		for(int j=0; j<100; j++){
-				pulsedb[i] = pulses[j][0]*RESOLUTION;
-				i+=2; 
-		}
-		i=0;
-		for(int j=0; j<100; j++){
-				pulsedb[i+1] = pulses[j][1]*RESOLUTION;
-				i+=2; 
-		}
-
-		// Pulso lido corretamente. 
-		currentpulse++;
-
-}
-
-// Fun\c{c}\~{a}o para mostrar o tempo dos pulsos no monitor serial
-void printpulses(void) {
-		Serial.println("\n\r\n\rRecebido: \n\rOFF \tON");
-		for (uint8_t i = 0; i < currentpulse; i++) {
-				Serial.print(pulses[i][0] * RESOLUTION, DEC);
-				Serial.print(" usec, ");
-				Serial.print(pulses[i][1] * RESOLUTION, DEC);
-				Serial.print(" usec\t");
-		}
-
-		delay(1000);
-		// Chama a fun\c{c}\~{a}o que manda o comando pelo led IR
-		SendCommand(currentpulse);
-}
-
-/* Esse procedimento manda um pulso de 38KHz para o IRledPin durande alguns 
- * microsegundos para reproduzir o comando decodificado (PWM).
- * */
-void pulseIR(long microsecs) {
-
-		cli();  // Desliga interrup\c{c}\~{o}es de background
-
-		while (microsecs > 0) {
-				// 38 kHz \'{e} aproximadamente 13 microsegundos high e 13 microsegundos low
-				digitalWrite(IRledPin, HIGH);  // digitalWrite dura 3 microsegundos
-				delayMicroseconds(10);         // esperar 10 microsegundos
-				digitalWrite(IRledPin, LOW);   // 3 microsegundos
-				delayMicroseconds(10);         // espeera mais 10 microsegundos
-
-				// ent\~{a}o diminuímos 26 microsegundos do pulso
-				microsecs -= 26;
-		}
-
-		sei();  // Liga as interrup\c{c}\~{o}es
-}
-
-/* Fun\c{c}\~{a}o que reproduz o comando no led IR utilizando a matriz de microsegundos
- * 'on' e 'off'
- */
-void SendCommand(uint8_t cp) {
-		for (uint8_t i = 0; i < cp; i++){
-				delayMicroseconds((pulses[i][0] * RESOLUTION)); // off
-				pulseIR((pulses[i][1] * RESOLUTION));           // on
-		}
-		Serial.println("Comando enviado!");
-}
-\end{lstlisting}
+\lstinputlisting[style=code, language=c, firstline=130, lastline=139,
+caption={Função {\tt sendCommand()}}, label={lst:dbphi0}]
+{codes/arduino_IR.c}
 \end{section}
 
 % Cassio
